kumir_tests/Tests/Common/Compiler_Error/test_compiler_error.kum
TEST TEST TEST




﻿алг
нач asdf
лог а;
а := (2 - 1 = 1);
лог а1 = (3 - 3 > 0);
лог а2; 
а2 := 2 - 1 <> 1;
лог
TEST а3 = (3 - 3) < 0;
лог а4 = (
TEST
(2 - 1 = 1asdfads) и (3 - 23) < 0);
лог а5 = (3 - 3 > 0 и (не (2 - 1 <> 1)));
лог а6 = (2 - 1 <> 1 или (3 - 23) < 0);
лог а7 = ((3 - 3) < 0 или не (2 - 1 <> 1));

лог аа = ((3 - 3) < 0 или (не ((2 - 1) <> 1)) и (3 - 3) < 0 или не (2 - 1 <> 1) и (3 - 23) < 0);
конasdf
TEST!
